fixed header hamburger menu buttons having uneven width

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -225,9 +225,7 @@ ul {
   .header .header-hamburger {display: block;}
   .header-menu .header-link {
     padding: 10px 25px;
-    align-items: right;
-    justify-content: right;
-    text-align: right;
+    width: 6rem
   }
 }
 
